# AI_customer_support_bot

./: ai_chat.tsx  app.py  index.html  ingest.py  main.py  pyproject.toml  requirements.txt
data/: docs.txt
frontend/src/: App.tsx  index.css
